--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 #spring.data.neo4j.uri=bolt://localhost:7687
-spring.data.neo4j.uri=bolt://${GRAPHENEDB_BOLT_USER}@{GRAPHENEDB_BOLT_PASSWORD}:${GRAPHENEDB_BOLT_URL}
+spring.data.neo4j.uri=${GRAPHENEDB_URL}
 spring.data.rest.basePath=/api
