Add Spring Security and Import/Export Feature

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 #spring.data.neo4j.uri=bolt://localhost:7687
 spring.data.neo4j.uri=${GRAPHENEDB_URL}
 spring.data.rest.basePath=/api
+
+token.expiration.time.milliseconds=86400000
+token.secret=yuown-familytree
