Change Neo4j DB

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 #spring.data.neo4j.uri=bolt://localhost:7687
-spring.data.neo4j.uri=${GRAPHENEDB_URL}
+spring.data.neo4j.uri=${NEO4J_URL}
 spring.data.rest.basePath=/api
 
 token.expiration.time.milliseconds=86400000
 token.secret=yuown-familytree
+
+spring.data.neo4j.username=${NEO4J_USER}
+spring.data.neo4j.password=${NEO4J_PWD}
