--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -23,7 +23,8 @@ jobs:
           cache: maven
           distribution: "corretto"
 
-      - run: ./mvnw clean install
+      - name: Maven Build
+        run: chmod +x ./mvnw && ./mvnw clean install
 
       - uses: actions/upload-artifact@v3
         with:
