--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,6 @@ stages:
 
 before_script:
     - export MAVEN_USER_HOME=`pwd`/.maven
-    - cd server
     - chmod +x mvnw
 
 maven-build:
@@ -24,4 +23,4 @@ maven-deploy:
         - ./mvnw com.heroku.sdk:heroku-maven-plugin:1.1.1:deploy -DskipTests -Dheroku.appName=nk-tree
     artifacts:
         paths:
-            - server/target/*.jar
+            - target/*.jar
