--- a/fly.toml
+++ b/fly.toml
@@ -11,8 +11,8 @@ kill_timeout = "5s"
 [processes]
   app = "java $JAVA_OPTS -Xmx256m -jar target/*.jar --server.port=$PORT"
 
-[build]
-  builder = "heroku/buildpacks:20"
+#[build]
+#  builder = "heroku/buildpacks:20"
 
 [[services]]
   protocol = "tcp"
