--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -28,7 +28,7 @@ jobs:
 
       - name: Build app with pack CLI & publish to GitHub Container Registry
         run: |
-          pack build ghcr.io/jonashackt/spring-boot-flyio:latest \
+          pack build ghcr.io/yenkaykiran/nk-tree:latest \
               --builder paketobuildpacks/builder:base \
               --path . \
               --env "BP_OCI_SOURCE=https://github.com/jonashackt/spring-boot-flyio" \
