--- a/fly.toml
+++ b/fly.toml
@@ -12,7 +12,7 @@ kill_timeout = "5s"
   builder = "heroku/buildpacks:20"
 
 [processes]
-  app = "java -Xmx256m -jar target/*.jar --server.port=$PORT"
+  app = "ls -ltr && java -Xmx256m -jar target/familytree-0.0.1-SNAPSHOT.jar"
 
 [[services]]
   protocol = "tcp"
