--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<java.version>17</java.version>
+<!--		<java.version>17</java.version>-->
 <!--		<maven.compiler.target>8</maven.compiler.target>-->
 <!--		<maven.compiler.source>8</maven.compiler.source>-->
 <!--		<maven.compiler.release>8</maven.compiler.release>-->
