--- a/pom.xml
+++ b/pom.xml
@@ -21,10 +21,10 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-<!--		<java.version>17</java.version>-->
-<!--		<maven.compiler.target>8</maven.compiler.target>-->
-<!--		<maven.compiler.source>8</maven.compiler.source>-->
-<!--		<maven.compiler.release>8</maven.compiler.release>-->
+		<java.version>17</java.version>
+		<maven.compiler.target>17</maven.compiler.target>
+		<maven.compiler.source>17</maven.compiler.source>
+		<maven.compiler.release>17</maven.compiler.release>
 	</properties>
 
 	<dependencies>
