--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -7,3 +7,4 @@ token.secret=yuown-familytree
 
 spring.data.neo4j.username=${NEO4J_USER}
 spring.data.neo4j.password=${NEO4J_PWD}
+spring.data.neo4j.database=neo4j
