--- a/.github/workflows/config.yaml
+++ b/.github/workflows/config.yaml
@@ -20,7 +20,7 @@ jobs:
       - uses: actions/setup-java@v3
         with:
           java-version: 8
-          distribution: "corretto"
+          distribution: "semeru"
       #          cache: 'maven'
 
       #      - run: npm ci
