--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,9 @@ token.secret=yuown-familytree
 spring.data.neo4j.username=${NEO4J_USER}
 spring.data.neo4j.password=${NEO4J_PWD}
 spring.data.neo4j.database=neo4j
+
+spring.cache.type=redis
+spring.redis.host=${REDIS_HOST}
+#spring.redis.port=${REDIS_PORT}
+spring.redis.password=${REDIS_PWD}
+spring.cache.redis.time-to-live=${REDIS_TTL}
